# Agenda-based-parser-for-MCFG

./: README.md  pyproject.toml
src/mcfg_parser/: abparser.py  grammar.py  tree.py
tests/: grammar_test.py  parser_test.py  tempCodeRunnerFile.py  tree_test.py
