[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "mcfg_parser"
version = "0.1.0"
description = "A module that can build a multiple context free grammar by the rules and alphabets provided and parse strings using agenda based parsing."
authors = ["Chihsheng Jin <jin22@ur.rochester.edu>"]
license = "MIT"
repository = "https://github.com/ChihshengJ/MCFG-parser"


[tool.poetry.dependencies]
python = "^3.6"
pyparsing = "^2.4"
pytest = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration"
]


